<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Knw00t</string>
    <string name="action_settings">Settings</string>
    <string name="titulo_principal_eventos">Eventos</string>
    <string name="titulo_principal_proximos">Proximas 24h</string>
    <string name="titulo_principal_perfil">Perfil</string>
    <string name="titulo_detalle_evento">Detalle</string>
    <string name="titulo_detalle_mapa">Mapa</string>
    <string name="titulo_detalle_comentarios">Comentarios</string>
    <string name="title_section4">Settings</string>
    <string name="title_detail0">Details</string>
    <string name="title_detail1">Coments</string>
    <string name="title_detail2">Map</string>
    <string name="Desc">Descripción</string>
    <string name="Tipo">Tipo</string>
    <string name="Carac">Caracteristicas</string>
    <string name="Lugar">Lugar</string>
    <string name="Precio">Precio</string>
    <string name="Mapa">Mapa</string>
    <string name="MapaBusqueda">Mapa</string>
    <string name="TituloBusqueda">Eventos de las proximas 24h </string>
    <string name="Comentar">Comenta o pregunta aquí</string>
    <string name="Asistidos">Has asistido a:</string>
    <string name="PorAsistir">Estas apuntado a:</string>
    <string name="dia">Eventos proximas 24h</string>
    <string name="semana">Eventos próximos 7 dias</string>
    <string name="mes">Eventos próximos 30 dias</string>



    <string-array name="planets_array">
        <item>Tipo</item>
        <item>Fecha</item>
        <item>Precio</item>
    </string-array>
    <string-array name="idiomas">
        <item>Castellano</item>
        <item>Valenciano</item>
        <item>Ingles</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="Listado">Lista de eventos</string>
    <string name="Cargando">Cargando</string>
    <string name="Espere">Espera por favor.</string>
    <string name="Atrasdetalle">Vuelve atras para ver el mapa</string>
    <string name="Atrasmapa">Vuelve atras para ver el detalle</string>
    <string name="AsistenciaOK">Te has apuntado al evento</string>
    <string name="AsistenciaKO">Te has borrado del evento</string>
    <string name="FAIL">Ha habido un fallo, intentalo de nuevo</string>
    <string name="login_fb">Log in</string>
    <string name="login_tw">Log in</string>
    <string name="login_gp">Log in</string>    
    <string name="logout_fb">Log out</string>
    <string name="logout_tw">Log out</string>
    <string name="logout_gp">Log out</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="notifications">Notificaciones activadas</string>
    <string name="borrado">Borrar usuario</string>
    <string name="pass">Contraseña</string>
    <string name="idioma">Idioma</string>
    <string name="datos_guardados">Datos guardados</string>
    <string name="revisa_datos">Completa todos los campos</string>
    <string name="pass_incorrecta">La contraseña no es correcta</string>
    <string name="alta_usuario">Alta de usuario</string>
    <string name="error_alta_existente">El nombre de usuario ya esta usado por otra persona...</string>
    <string name="baja_existente">El usuario se ha dado de baja</string>
    <string name="error_baja_existente">Error en el proceso de baja</string>
    <string name="error_interno">Error interno</string>
    
    <string name="need_user">Necesitas estar dado de alta para comentar</string>
    <string name="comentario_down_fail">Error al descargar comentarios</string>
    <string name="comentario_ok">Comentario enviado correctamente</string>
    <string name="comentario_ko">Error al enviar comentario</string>
    
    <string name="eventos_familiares">Familiares</string>
    <string name="eventos_gratis">Gratis</string>
    <string name="eventos_todos">Todos</string>

    
    
    
<!--     de plus -->

    <string name="list_moments_title">Touch a moment to delete</string>
    <string name="send_interactive_button_name">Send Interactive Post</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke access</string>
    <string name="disconnect_button_name">Disconnect</string>
    <string name="share_title">Prefill Text (optional)</string>
    <string name="share_prefill_text">Welcome to the Google+ platform.</string>

    <string name="offline_status_prefix">Offline:\u0020</string>
    <string name="offline_server_error">Server error</string>

    <string name="default_status"/>
    <string name="greeting_status">Welcome, %s.</string>
    <string name="greeting_status_sign_in_required">Sign-in required</string>
    <string name="greeting_status_error">Error signing in: %s.</string>
    <string name="loading_status">Loading…</string>
    <string name="signing_in_status">Signing in with Google+.</string>
    <string name="signed_in_status">Signed in as \"%s\".</string>

    <!-- Used if there was an error loading the signed in user's name. -->
    <string name="unknown_person">Unknown</string>
    <string name="signed_out_status">Signed out.</string>
    <string name="revoke_access_status">Revoked access.</string>
    <string name="revoke_access_error_status">Unable to revoke access.</string>

    <string name="plus_write_moment_status">Saving moment</string>
    <string name="plus_remove_moment_status">Removing moment</string>

    <string name="plus_one_small_name">Small +1 button</string>
    <string name="plus_one_medium_name">Medium +1 button</string>
    <string name="plus_one_tall_name">Tall +1 button</string>
    <string name="plus_one_standard_name">Standard +1 button</string>
    <string name="plus_one_standard_ann_name">Standard +1 button (with inline annotation)</string>

    <string name="plus_example_deep_link_id">/+/mobile/android/</string>
    <string name="plus_example_deep_link_url">
        https://developers.google.com/+/mobile/android/
    </string>
    <string name="plus_generic_error">Sign in with Google is not available.</string>
    <string name="progress_message">Signing in to Google&#8230;</string>

    <string name="barra_buscar">Busqueda</string>
    <string name="barra_filtrar">Filtrar</string>

    <string name="app_id">696648307080753</string>
    <string name="title_facebook_login">Vplans</string>

    <string name="boton_facebook">Facebook</string>
    <string name="boton_twitter">Twitter</string>
    <string name="boton_plus">Google+</string>
    <string name="boton_otros">Otros</string>
    <string name="boton_apuntate">Apúntate</string>
    <string name="boton_desapuntate">Bórrate</string>

    <string name="Cine">CINE</string>
    <string name="Teatro">TEATRO</string>
    <string name="Musica">MUSICA</string>
    <string name="Conferencia">CONFERENCIA</string>
    <string name="Exposiciones">EXPO</string>
    <string name="Otros">OTROS</string>
    <string name="Eventos">EVENTOS</string>


    <string name="apuntateLabel"><u>Apúntate</u></string>
    <string name="comparteLabel"><u>Comparte</u></string>
    <string name="otrosLabel"><u>Otros</u></string>

    <string name="lastUpdate">Última actualización: </string>
    <string name="noDisponible">(No disponible)</string>
</resources>