<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >


        <TextView
            android:id="@+id/mapa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/titulo_parrafo"
            android:text="@string/MapaBusqueda"
            android:textColor="@color/google_fuentes"
            android:textStyle="normal"
            android:typeface="normal" />

        <ImageButton
            android:id="@+id/mapa_butt"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/mapa"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/titulo_parrafo"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:soundEffectsEnabled="true"
            android:src="@drawable/click_map" />

        
    <TextView
        android:id="@+id/carac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mapa_butt"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/nuevo_titulo"
        android:text="@string/Tipo"
        android:textColor="@color/google_fuentes"
        android:textStyle="normal"
        android:typeface="normal" />

    <ListView
        android:id="@+id/ListaBusqueda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/BotonListaBusqueda"
        android:layout_below="@+id/carac"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@android:color/transparent"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp" >
    </ListView>

    <Button
        android:id="@+id/BotonListaBusqueda"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundededittext"
        android:text="@string/Listado"
        android:textColor="@color/google_fuentes"
        android:textStyle="normal"
        android:typeface="normal" />

</RelativeLayout>